[package]
authors = ["Ceri Storey <cez@necrofish.org.uk>"]
description = "Experiment in combining libfringe + futures"
homepage = "https://github.com/cstorey/fringe-futures"
license = "MIT"
name = "fringe-futures"
version = "0.1.0"
[dependencies]
futures = "0.1.2"
log = "*"

[dependencies.fringe]
version = "1.2.1"
default-features = false

[dev-dependencies]
env_logger = "0.3.5"
